2003-08-28  Sam Steingold  <sds@gnu.org>

	* time.d (get_run_time) [TIME_UNIX]: when HZ is not defined, use
	CLK_TCK or CLOCKS_PER_SECOND.
	Reported by Prut Flut <prutflut@m-net.arbornet.org> (NetBSD)

2003-08-27  Sam Steingold  <sds@gnu.org>

	* utils/modprep.lisp: merged in signature emulation from e2d.c
	* Makefile.devel (CONFIG_H_IN): added clx/new-clx/config.h.in
	* modules/clx/new-clx/config.h.in: new file
	* modules/clx/new-clx/Makefile.in: use modprep instead of e2d.c
	* modules/clx/new-clx/e2d.c: removed
	* modules/clx/new-clx/configure.in: check for XGetAtomNames()
	* modules/clx/new-clx/clx.f: converted to standard C and modprep.lisp
	* genclisph.d: export much stuff necessary for new-clx
	* spvw_sigpipe.d (disable_sigpipe): new function for new-clx

2003-08-27  John Hinsdale <hin@alma.com>
	* modules/oracle/README, oracle.lisp - More documentation

2003-08-26  Sam Steingold  <sds@gnu.org>

	* control.d (MACROLET): fixed a GC-safety bug
	* condition.lisp (define-condition): return name, as per ANSI

2003-08-26  Sam Steingold  <sds@gnu.org>

	* makemake.in (modular): do not depend on exporting, modprep, clisp.h
	(anymodule): depend on exporting, modprep, clisp.h

2003-08-25  Arseny Slobodjuck  <ampy@ich.dvo.ru>

	* utils/comment5.c (main): handle '# ' in traditional comments.
	* makemake.in : do not treat pathname.d specially.

2003-08-23  Sam Steingold  <sds@gnu.org>

	* makemake.in (MODULESDIR, MODULESDIR_, MODULESDIR_M): new vars
	(exporting.fas): depend on ${MODULESDIR_M}exporting.lisp, not the link
	(modular): depend on clisp.h
	* configure: do not link plain files in modules (exporting will
	picked up from here); link modules/* directories even when
	building without FFI because many modules (regexp, syscalls,
	dirkey, clx/new-clx) do not require FFI

2003-08-22  Sam Steingold  <sds@gnu.org>

	* init.lisp (defun): reverted the 2003-08-12 patch: cannot parse
	the signature at macroexpand time, FUNCTION should see it first
	for proper error reporting
